# memory_plasmab_dynamics

./: .gitignore  README.md  sample_statistics.ipynb
Mikelov_data/: 1_fastq_download.sh  2_mixcr.sh  3.1_ChangeO_preprocess.ipynb  3.2_ChangeO.sh  6.1_hilary_preprocess.ipynb  6.2_hilary_run.sh  6.4_hilary_info.ipynb  6.5_reduce_frame_size.ipynb  7.1_infer_noise.ipynb  7.2_infer_noise_results.ipynb  8.2_infer_gbm.ipynb
Mikelov_data/.ipynb_checkpoints/: 4_seq_parsing-checkpoint.ipynb  5_seq_info-checkpoint.ipynb  6.3_hilary_remap-checkpoint.ipynb  6.4_hilary_info-checkpoint.ipynb  6.5_reduce_frame_size-checkpoint.ipynb  7.2_infer_noise_results-checkpoint.ipynb  7.3_infer_noise_marginals-checkpoint.ipynb  8.1_gbm_priors-checkpoint.ipynb  9.1_infer_memplasm-checkpoint.ipynb
Mikelov_data/metadata/: meta_database.tsv  metadata.tsv  metadata_samples.tsv
Phad_data/: 2_cellranger.sh  4_seq_parsing.ipynb  5_seq_info.ipynb  6.2_hilary_run.sh  6.3_hilary_remap.ipynb  6.4_hilary_info.ipynb  7.1_infer_noise.ipynb  7.2_infer_noise_results.ipynb  7.3_infer_noise_marginals.ipynb  8.2_infer_gbm.ipynb  8.3_gbm_marginals.ipynb  9.1_infer_memplasm.ipynb  reduce_frame_size.ipynb
func_build/: CMakeCache.txt  CMakeLists.txt  func_pywrap.cpp
func_py/: data_utils.py  infer_gbm.py  infer_memplasm.py  my_utils.py  plot_utils.py
src_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  like_func_pywrap.cpp  test  test.cpp
src_cpp/src/: noise_plaw_negbin.h  noise_plaw_poisson.h  trapezoid.h  utils.h
src_py/: data_utils.py  my_utils.py  noise_gen.py  plot_utils.py
(+377 files in other folders)
